test/Sema/recursive-deduction.src
// V %srcc --sema --verify %s
program test;

proc x = x(); // expected-error (Cannot call procedure before its return type has been deduced) expected-note (Declared here)

// No error here since we have already diagnosed that there
// is a problem with x.
x();
